agregamos comentarios, lazy loading, cambiamos el codigo en funciones.js

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Optener la diferente inforamacion de los paises de todo el mundo como su nombre, poblacion, capital, lenguas, etc.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
@@ -28,7 +29,7 @@
                  <img class="icon" src="icons/search.svg" alt="buscar">
              </div>
              <div class="main__region">
-                     <h3 class="main__region-select">search by region <img src="icons/arrow-region.svg" alt="arrow" class="arrow-region"></h3>
+                     <p class="main__region-select">search by region <img src="icons/arrow-region.svg" alt="arrow" class="arrow-region"></p>
                      <div class="main__region-option">
                          <ul>
                              <li data-region="americas" class="region">America</li>
