--- a/mas_informacion.html
+++ b/mas_informacion.html
@@ -9,17 +9,17 @@
     <title>Paises del mundo</title>
 </head>
 <body class="masInformacion-body">
-     <header class="header">
-        <div class="container">
-            <div class="header__text">
-                <h1>Where in the world?</h1>
-            </div>
-            <div class="header__mode">
-                <img class="header__mode-icon" src="icons/moon-light.svg" alt="modo claro">
-                <p class="header__mode-text">Drark Mode</p>
-            </div>
+<header class="header">
+    <div class="container">
+        <div class="header__text">
+            <h1>countries of the world!!</h1>
         </div>
-     </header>    
+        <div class="header__mode">
+            <img class="header__mode-icon" src="icons/moon-light.svg" alt="modo claro">
+            <p class="header__mode-text">Drark Mode</p>
+        </div>
+    </div>
+ </header>    
     
      <main class="mas_informacion container">
        <div class="mas_informacion__btn-regresar">
