corregimos algunos errores de ortografia

--- a/mas_informacion.html
+++ b/mas_informacion.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<head>
     <meta charset="UTF-8">
+    <meta name="description" content="Optener la diferente inforamacion de los paises de todo el mundo como su nombre, poblacion, capital, lenguas, etc.">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Paises del mundo</title>
+    <title>World's countries</title>
+</head>
 </head>
 <body class="masInformacion-body">
 <header class="header">
     <div class="container">
         <div class="header__text">
-            <h1>countries of the world!!</h1>
+            <h1>World's countries!!</h1>
         </div>
         <div class="header__mode">
             <img class="header__mode-icon" src="icons/moon-light.svg" alt="modo claro">
-            <p class="header__mode-text">Drark Mode</p>
+            <p class="header__mode-text">Dark Mode</p>
         </div>
     </div>
  </header>    
